--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!---OG Markup-->
         <meta prefix="og: http://ogp.me/ns#" property="og:type" content="website">
-        <meta prefix="og: http://ogp.me/ns#" property="og:title" content="Gaia Gardens Gallery">
+        <meta prefix="og: http://ogp.me/ns#" property="og:title" content="About Gaia Gardens">
         <meta prefix="og: http://ogp.me/ns#" property="og:description" content="Gardening and Tree Services Operating Out of the Seattle, Washington Area">
         <meta prefix="og: http://ogp.me/ns#" property="og:image" content="">
         <meta prefix="og: http://ogp.me/ns#" property="og:url" content="https://gaiagardensllc.com/">
@@ -36,7 +36,7 @@
         <section class="main-body">
             <div class="top-bar">
                 <!--mobile--><img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
-                <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://1drv.ms/i/c/b81a9b7983f88386/UQSGg_iDeZsaIIC44x8AAAAAAJU_I6CB1PtjBDA?width=165&height=97">
+                <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166394/Gaia_Gardens_LogoGreen_q6fol2.png">
                 <div class="spacer"></div>
             </div>
             <header id="alternate-nav-header">
@@ -66,21 +66,25 @@
                 </section>
             </div>
             <!------Main Content-------->
-            <section class="content">
-                <div class="content-grid">
-                    <div id="aboutpg-item1" class="content-item">
+            <section class="about-content">
+                <div class="about-content-grid">
+                    <div id="aboutpg-item1" class="about-content-item">
                         <div class="aboutpg1container1">
                             <h2>Our Story</h2>
                             <p>Bre first started her business in 2019 providing garden maintenance in Seattle, WA with a focus
                                 on sustainability and creating habitat for all living creatures.
                             </p>
                             <div id="about-img-grid">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%2118509&authkey=%21ABzXNGGoL6evMFw&width=802&height=601" alt="">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%2118526&authkey=%21AFNKRQhi5r5n50c&width=2160&height=1510" alt="">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%2118524&authkey=%21AFCNQ5fa-9QDr9k&width=3024&height=4032" alt="">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218947&authkey=%21AB1Qh04as1rQ2TA&width=1920&height=1440" alt="">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218926&authkey=%21ANEaFCKFsrqnZa8&width=1700&height=2122" alt="">
-                                <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218987&authkey=%21ANs4OE-gGYv-NnM&width=375&height=306" alt="">
+                                <div class="about-img-row">
+                                    <div id="about-img1"></div>
+                                    <div id="about-img2"></div>
+                                    <div id="about-img3"></div>
+                                </div>
+                                <div class="about-img-row">
+                                    <div id="about-img4"></div>
+                                    <div id="about-img5"></div>
+                                    <div id="about-img6"></div>
+                                </div>
                             </div>
                         </div>
 
@@ -88,27 +92,37 @@
                             design, installation, and tree management.</p></div>
                         
                             <div class="aboutpg1container2">
-                                <img src="https://1drv.ms/i/s!AoaD-IN5mxq4gZBNHNc0Yagvp68wXA?embed=1&width=802&height=601" alt="photo of bre and anthony in tree cutting safety gear">
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742738571/bre_and_anthony_twx40j.png" alt="photo of bre and anthony in tree cutting safety gear">
                                 <p>She met her future husband,
                                     Anthony, while volunteering with the Washington Native Plant Society. They married in 2021 and
                                     Anthony joined the Gaia Gardens team in 2022.</p>
                         </div>
                     </div>
-                    <div id="aboutpg-item2" class="content-item">
-                        <h2>Our Ethos</h2>
-                        <p>A sustainable, ecological solution to urban gardens. Helping to make connections between home and nature.
-                        </p>
-                        <img src="" alt="">
+                    <div id="aboutpg-item2" class="about-content-item">
+                        <div id="ethosbox">
+                            <h2>Our Ethos</h2>
+                            <p>A sustainable, ecological solution to urban gardens. Helping to make connections between home and nature.
+                            </p>
+                        </div>
                     </div>
-                    <div id="aboutpg-item3" class="content-item">
+                    <div id="aboutpg-item3" class="about-content-item">
                         <h2>FAQ</h2>
-                        <ol>
-                            <li>Question #1?: Answer #1</li>
-                            <li>Question #2?: Answer #2</li>
-                            <li>Question #3?: Answer #3</li>
-                        </ol>
+                        <ul>
+                            <li>
+                                <h3>Question #1?:</h3>
+                                <p>Answer #1</p>
+                            </li>
+                            <li>
+                                <h3>Question #2?:</h3>
+                                <p>Answer #2</p>
+                            </li>
+                            <li>
+                                <h3>Question #3?:</h3>
+                                <p>Answer #3</p>
+                            </li>
+                        </ul>
                     </div>
-                    <div id="aboutpg-item3" class="content-item">
+                    <div id="aboutpg-item4" class="about-content-item">
                         <h2>Bre's Reading Corner</h2>
                         <img src="" alt="">
                     </div>
