--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="main-body">
             <div class="top-bar">
                 <!------Navigation------>
-                <!--mobile--><img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
+                <!--mobile--><img id="hamburger" class="hide-xl" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1743123934/hamburgerwhite_ch8isz.png">
                 <img id="gaia-logo-top" loading="lazy" class="hide-xs" alt="logo" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166394/Gaia_Gardens_LogoGreen_q6fol2.png">
                 <div class="spacer"></div>
                 <div class="callnow-section hide-xs">
@@ -53,7 +53,7 @@
                 <div class="socials hide-xs">
                     <a href = "mailto: bre@gaiagardensllc.com"><img loading="lazy" id="mailiconhomepage" alt="mail icon" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166395/mailicon_l8lwro.png"></a>
                 </div>
-                <img id="gaia-logo-mobile" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218964&authkey=%21AJJM923R_qkmnYU&width=217&height=128">
+                <img id="gaia-logo-mobile" class="hide-xl" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166398/Screenshot_161_mkrmxt.png">
                 <nav id="main-nav">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
@@ -83,7 +83,7 @@
             <div id="mobile-background" class="hide-xl">
                 <div id="treescontainer">
                 
-                    <img id="mobile-logo" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218962&authkey=%21ALeL9q-7moiNDHA&width=286&height=284">
+                    <img id="mobile-logo" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1743124044/Group_133_djzff8.png">
                     <div id="mobile-splash">
                         <h3>Creating healthy habitats for humans and wildlife alike, one backyard at a time.</h3>
                     </div>
@@ -133,7 +133,7 @@
                     </div>
                     <div id="item3" class="content-item">
                         <div id="familyinfo">
-                            <img class="hide-xl" alt="family photo" src="https://dsm01pap009files.storage.live.com/y4mqt4HtK30bY33VgAFQBZTy4ZPhrWRCys-r-4VAt9rzwykEi2hatvmJi7k0zbVoMIrTansLN6qpXUj-i7btYU3yXYxWmdFQnFlMqukJx1IIJv6RSyv0MwrRubh9ZWCiuxnSJnZfOL5_oSCrL8gz1d7Fw0KkIPLdpjo6RGGBMGCX5ECmPJ3RqjhIKpiJzcRd1Q9?width=560&height=700&cropmode=none">
+                            <img class="hide-xl" alt="family photo" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166647/breandanthony_kkyyfe.png">
                             <h3>Our Story</h3>
                             <p>
                                 Bre started her garden maintenance business in 2019 with a focus on sustainability and creating healthy habitats for humans and local wildlife.
@@ -160,7 +160,7 @@
                         </div>
                     </div>
                     <div class="content-item hide-xl" id="pruningpic">
-                        <img src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218821&authkey=%21AHa35zRL67VsdjQ&width=2590&height=2996"  width="100%" alt="Arborist Pruning a Tree">
+                        <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1743187608/IMG_4115_kwrkgv.jpg"  width="100%" alt="Arborist Pruning a Tree">
                     </div>
                     <div id="item5" class="content-item">
                         <h3>Our Services</h3>
