--- a/services.html
+++ b/services.html
@@ -41,12 +41,12 @@
         <section class="main-body">
             <div class="top-bar">
                 <!------Navigation------>
-                <!--mobile--><img id="hamburger" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218963&authkey=%21ABErlrmlD5xalUc&width=32&height=28">
+                <!--mobile--><img id="hamburger" class="hide-xl" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1743123934/hamburgerwhite_ch8isz.png">
                 <img id="gaia-logo-top"class="hide-xs" alt="logo" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166394/Gaia_Gardens_LogoGreen_q6fol2.png">
                 <div class="spacer"></div>
             </div>
             <header id="alternate-nav-header">
-                <img id="gaia-logo-mobile" class="hide-xl" src="https://onedrive.live.com/embed?resid=B81A9B7983F88386%218964&authkey=%21AJJM923R_qkmnYU&width=217&height=128">
+                <img id="gaia-logo-mobile" class="hide-xl" src="https://res.cloudinary.com/dr3r301ht/image/upload/v1742166394/Gaia_Gardens_LogoGreen_q6fol2.png">
                 <nav id="main-nav">
                     <ul>
                         <li class="non-drop"><a href="index.html">Home</a></li>
