--- a/about.html
+++ b/about.html
@@ -109,16 +109,19 @@
                         <h2>FAQ</h2>
                         <ul>
                             <li>
-                                <h3>Question #1?:</h3>
-                                <p>Answer #1</p>
+                                <h3>Why should I hire an arborist? What is a certified arborist?</h3>
+                                <p>"Trees are an investment that require proper tree care; however, pruning or removing trees, especially large trees, can be dangerous work. Tree work should be done only by those trained and equipped to work safely in trees..."</p>
+                                <a href="https://www.treesaregood.org/treeowner/whyhireanarborist">Read More On TreesAreGood.org</a>
                             </li>
                             <li>
-                                <h3>Question #2?:</h3>
-                                <p>Answer #2</p>
+                                <h3>When should I water? How much should I water?</h3>
+                                <p>King County's Solid Waste Division has a great guide for watering, linked below.</p>
+                                <a href="https://www.kingcounty.gov/~/media/depts/dnrp/solid-waste/natural-yard-care/documents/When_to_water.ashx?la=en#:~:text=Apply%20no%20more%20than%201,(See%20chart%20below.)&text=It%20is%20equally%20important%20to,roots%20deeper%20into%20the%20soil">View PDF</a>
                             </li>
                             <li>
-                                <h3>Question #3?:</h3>
-                                <p>Answer #3</p>
+                                <h3>What are the benefits of mulching?</h3>
+                                <p>Washington State University has an informative document written by by Linda Chalker-Scott that describes all you need to know about mulch.</p>
+                                <a href="https://res.cloudinary.com/dr3r301ht/image/upload/v1744242539/FS160E_wyvato.pdf">View PDF</a>
                             </li>
                         </ul>
                     </div>
