--- a/about.html
+++ b/about.html
@@ -121,13 +121,74 @@
                             <li>
                                 <h3>What are the benefits of mulching?</h3>
                                 <p>Washington State University has an informative document written by by Linda Chalker-Scott that describes all you need to know about mulch.</p>
-                                <a href="https://res.cloudinary.com/dr3r301ht/image/upload/v1744242539/FS160E_wyvato.pdf">View PDF</a>
+                                <a href="https://pubs.extension.wsu.edu/using-arborist-wood-chips-as-a-landscape-mulch-home-garden-series">View PDF</a>
+                            </li>
+                            <li>
+                                <h3>Why plant natives?</h3>
+                                <p>"Native plants are adapted to our climate of wet winters and dry summers,
+                                    Require less water than most non-natives once they are established,
+                                    Resist native pests and diseases better,
+                                    Improve water quality by needing less fertilizer and no pesticides,
+                                    and save resources and encourage a sense of Stewardship."</p>
+                                <a href="https://www.wnps.org/native-gardening">Read more on the Washington Native Plant Society Website</a>
                             </li>
                         </ul>
                     </div>
-                    <div id="aboutpg-item4" class="about-content-item">
+                    <div id="aboutpg-item4" class="about-content-item" class="about-content-item">
                         <h2>Bre's Reading Corner</h2>
-                        <img src="" alt="">
+                        <ul>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247108/Cass_Turnbull_Guide_to_pruning_ozjqdr.jpg" alt="">
+                                <h4>Cass Turnbull's guide to pruning: what, when, where & how to prune for a more beautiful garden.</h4>
+                                <p>By Cass Turnbull</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247107/food_grown_right_in_your_backyard_pxk4qp.jpg" alt="">
+                                <h4>Food Grown Right, In Your Backyard: A Beginner's Guide to Growing Crops at Home</h4>
+                                <p>By Brad Halm and Colin McCrate</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247107/gardening_with_native_plants_pacific_nw_ghpwkq.jpg" alt="">
+                                <h4>Gardening with Native Plants of the Pacific Northwest</h4>
+                                <p>By Arthur R. Kruckeberg and Linda Chalker-Scott</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247108/growing_veg_west_of_cascades_svgqyh.jpg" alt="">
+                                <h4>Growing Vegetables West of the Cascades, 6th Edition: The Complete Guide to Organic Gardening</h4>
+                                <p>By Steve Solomon</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247107/landscaping_for_wildlife_y7g1zc.jpg" alt="">
+                                <h4>Landscaping for Wildlife in the Pacific Northwest</h4>
+                                <p>By Russell Link</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247109/nw_foraging_n1i4r4.jpg" alt="">
+                                <h4>Northwest Foraging: The Classic Guide to Edible Plants of the Pacific Northwest</h4>
+                                <p>By Doug Benoliel</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247109/pnw_month_by_month_vchtgt.jpg" alt="">
+                                <h4>Pacific Northwest: Month-by-Month Gardening</h4>
+                                <p>By Christina Pfeiffer</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247109/plants_of_pnw_coast_r859zm.jpg" alt="">
+                                <h4>Plants of the Pacific Northwest Coast: Washington, Oregon, British Columbia and Alaska</h4>
+                                <p>By Jim Pojar and Andy MacKinnon</p>
+                                
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247108/pnw_plant_primer_qu00so.jpg" alt="">
+                                <h4>The Pacific Northwest Native Plant Primer: 225 Plants for an Earth-Friendly Garden</h4>
+                                <p>By Kristin Currin and Andrew Merritt</p>
+                            </li>
+                            <li>
+                                <img src="https://res.cloudinary.com/dr3r301ht/image/upload/v1744247108/trees_of_seattle_piyjlu.jpg" alt="">
+                                <h4>Trees of Seattle</h4>
+                                <p>By Arthur Lee Jacobson</p>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </section>
